public/style.css
body {
  font-family: sans-serif;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}

.homeContent {
  display: flex;
  flex-direction: row;
  height: 100%;
}

/* Game */
.gameFrame {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 300px;
  height: 450px;
  border: solid #d1d1d0 1px;
  border-radius: 50% / 35%;
}

.gameFrame.morning {
  background: linear-gradient(180deg, #bde0fe 70%, #008000 30%);
}
.gameFrame.afternoon {
  background: linear-gradient(180deg, #e3f2fd 70%, #aacc00 30%);
}
.gameFrame.evening {
  background: linear-gradient(180deg, #031d44 70%, #41521f 30%);
}

.gameFrame .content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 55px;
}

.gameFrame .level {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.gameFrame .level h1 {
  font-size: 17px;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}
.gameFrame .level h2 {
  font-size: 15px;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}
.gameFrame .progress {
  width: 60%;
}

.gameFrame .game {
  display: flex;
  flex-direction: row;
  margin-top: 10px;
}

.tree {
  width: 75%;
  height: auto;
  flex-grow: 3;
}

.inventory {
  margin: 15px;
  align-self: flex-start;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-grow: 2;
  margin: 15px;
}

.inventory .chest {
  width: 55px;
}

.inventory .rewards {
  display: flex;
  flex-direction: column;
}

.inventory .item {
  display: flex;
  flex-direction: row;
}

.inventory .img {
  width: 40px;
  margin: 3px;
}

.inventory span {
  font-size: 7px;
}

.game .bubble {
  font-size: 9px;
}

/* these might be helpful or they might break the graphs
.graphs-container {
  height: 20rem;
}

.graph-row {
  padding: 50px;
}

div.graphs-container.container {
  padding-bottom: 100px;
}

.pie-chart-container {
  height: 30rem;
  width: 0rem;
} */

/*Login / Signup*/
.signin {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 75px 30px 30px 30px;
  height: 500px;
}

.signin-info {
  height: 100%;
  width: 50%;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-weight: 300;
  color: rgb(103, 102, 102);
  border: solid rgb(178, 178, 178) 0.5px;
  border-radius: 0.5rem;
}

.signin-info.login {
  background-color: #ffcfdf;
  background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
}

.signin-info.signup {
  background-color: #aff6cf;
  background-image: linear-gradient(315deg, #aff6cf 0%, #9f98e8 74%);
}

.signin-info .form-element {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  margin: 5px;
}

.signin-info input {
  border-radius: 3px;
  color: gray;
  font-family: sans-serif;
  font-weight: 300;
  font-size: 13px;
  padding: 5px;
  border: solid #cccccc;
}
.signin-info small {
  font-size: 15px;
}

.signin .btn {
  width: 70px;
  align-self: center;
  padding: 5px;
  margin: 10px;
}

.signin-info h1 {
  font-size: 30px;
  padding: 30px;
  color: rgb(63, 63, 63);
}

.signin-info form {
  display: flex;
  flex-direction: column;
}

.pretty-intro {
  width: 50%;
}
/*  StrecthList styling*/

.stretchlist-card {
  height: 100%;
  justify-content: space-between;
  align-content: space-between;
  padding: 10px;
}

/*  Favorite Stretches Styling */

.favorites-card {
  justify-content: space-between;
  align-content: space-between;
  padding: 15px;
  height: 100%;
}
#favorites-title {
  text-align: center;
  font-weight: bold;
  padding-bottom: 15px;
}

.favorites-remove-button {
  justify-self: flex-end;
  margin-top: auto;
  /* align-self: flex-end; */
  /* margin-bottom: auto; */
}

/*  Pie Chart Styling*/
.pie-chart-container {
  display: flex;
  flex-direction: column;
  align-content: center;
}

/* */

.favorites-container {
  margin-left: 250px;
  padding: 50px;
}
/* Main Data Visualization Page Styling */

.data-viz-body {
  margin-left: 250px;
  padding: 50px;
}

.graphs-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: center;
  padding: 50px;
}

.graph-column {
  width: 100%;
  padding-bottom: 20px;
}

.line-graph-container {
  /* padding-top: 50px; */
  margin: auto;
}

.data-viz-body {
  background-color: #d9d9d9;
}

#posture-pie-loading-message {
  text-align: center;
}

#pain-area-loading-message {
  text-align: center;
}

#discomfort-level-line-loading-message {
  text-align: center;
}

/* Sidebar Styling */

.navbar {
  background-color: #060b26;
  height: 80px;
  display: flex;
  justify-content: start;
  align-items: center;
}

.menu-bars {
  margin-left: 2rem;
  font-size: 2rem;
  background: none;
}

.nav-menu {
  background-color: #354f52;
  width: 250px;
  height: 100vh;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: -100%;
  transition: 850ms;
}

.nav-menu.active {
  left: 0;
  transition: 350ms;
}

.nav-text {
  display: flex;
  justify-content: start;
  align-items: center;
  padding: 8px 0px 8px 16px;
  list-style: none;
  height: 60px;
}

.nav-text a {
  text-decoration: none;
  color: #f5f5f5;
  font-size: 18px;
  width: 95%;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 16px;
  border-radius: 4px;
}

.nav-text a:hover {
  background-color: #1a83ff;
}

.nav-menu-items {
  width: 100%;
  padding: 40px;
  list-style-type: none;
}

.navbar-toggle {
  background-color: #354f52;
  width: 100%;
  height: 80px;
  display: flex;
  justify-content: start;
  align-items: center;
}

.sidebar-span {
  margin-left: 16px;
  text-decoration: none;
  color: #cad2c5;
  font-size: 1.3rem;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

.sidebar-span:hover {
  color: rgb(10, 204, 194);
}

.spineify-title {
  color: white;
  font-size: 1.7rem;
  font-family: "Courier New", Courier, monospace;
}

.app-container {
  position: absolute;
}

.sidebar {
  position: fixed;
  background-color: #354f52;
}

.body-content {
  margin-left: 250px;
  background-color: #e9ebe8;
  height: 100vh;
  width: 100vw;
}

.body-content-signin {
  margin-left: 250px;
  background-color: white;
  height: 100vh;
  width: 100vw;
}

/*  Home styling */
#home {
  display: flex;
  flex-direction: column;
  margin-left: 250px;
  /* justify-content: center;
  align-items: center; */
}

.home-info {
  display: flex;
}

.welcome-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 50px;
  height: 400px;
}

.homeContent {
  height: 400px;
}

.welcome-name {
  font-family: "Courier New", Courier, monospace;
  font-size: 1.4rem;
}

/* Tracker */

.tracker-container {
  margin-left: 250px;
  background-color: #e9ebe8;
  margin-bottom: 50px;
}

.tracker-button {
  border-radius: 3px;
  padding: 7px;
  background-color: #84a98c;
  color: white;
  border: none;
}

.tracker-button:hover {
  background-color: #1a83ff;
  transition-duration: 300ms;
}

#modal-button {
  border-radius: 3px;
  padding: 7px;
  background-color: #84a98c;
  color: white;
  border: none;
}

#modal-button:hover {
  background-color: #1a83ff;
  transition-duration: 300ms;
}

